src/test/ui/or-patterns/exhaustiveness-non-exhaustive.stderr
error[E0004]: non-exhaustive patterns: `(2_u8..=u8::MAX, _)` not covered
  --> $DIR/exhaustiveness-non-exhaustive.rs:5:11
   |
LL |     match (0u8, 0u8) {
   |           ^^^^^^^^^^ pattern `(2_u8..=u8::MAX, _)` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms
   = note: the matched value is of type `(u8, u8)`

error[E0004]: non-exhaustive patterns: `((4_u8..=u8::MAX))` not covered
  --> $DIR/exhaustiveness-non-exhaustive.rs:9:11
   |
LL |     match ((0u8,),) {
   |           ^^^^^^^^^ pattern `((4_u8..=u8::MAX))` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms
   = note: the matched value is of type `((u8,),)`

error[E0004]: non-exhaustive patterns: `(Some(2_u8..=u8::MAX))` not covered
  --> $DIR/exhaustiveness-non-exhaustive.rs:13:11
   |
LL |     match (Some(0u8),) {
   |           ^^^^^^^^^^^^ pattern `(Some(2_u8..=u8::MAX))` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms
   = note: the matched value is of type `(Option<u8>,)`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0004`.
